Finish removing most calls to REST models outside delegation; a few to do with resource creation remain.